{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 63,
  "lineage": "a923c549-ff09-1fdf-fcba-b493e8e7d7de",
  "resources": [
    {
      "module": "module.compute_engine",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.76.150.125",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-20T12:28:05.002-07:00",
            "id": "projects/hale-mercury-454219-r1/regions/europe-west1/addresses/ipv4-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "hale-mercury-454219-r1",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/regions/europe-west1/addresses/ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/zones/europe-west1-b/instances/tecweb-instance"
            ]
          }
        }
      ]
    },
    {
      "module": "module.compute_engine",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/zones/europe-west1-b/disks/tecweb-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hale-mercury-454219-r1/zones/europe-west1-b/instances/tecweb-instance",
            "instance_id": "482016713793196608",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "TdxkJQ4iFr0=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo apt update \u0026\u0026 sudo apt install -y python3 python3-venv python3-pip nginx certbot python3-certbot-nginx\n\nmkdir -p /opt/flask-app\ncd /opt/flask-app\n\npython3 -m venv venv\nsource venv/bin/activate\npip install --upgrade pip\npip install flask gunicorn\n\ncat \u003c\u003cEOF \u003e /opt/flask-app/app.py\nfrom flask import Flask\napp = Flask(__name__)\n\n@app.route(\"/\")\ndef home():\n    return \"\u003ch1\u003eOlá Mundo! Env [...]
            "name": "tecweb-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.150.125",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/regions/europe-west1/subnetworks/subnetwork",
                "subnetwork_project": "hale-mercury-454219-r1"
              }
            ],
            "project": "hale-mercury-454219-r1",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/zones/europe-west1-b/instances/tecweb-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https-server"
            ],
            "tags_fingerprint": "nNZ0SA7CJyk=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.compute_engine.google_compute_address.ip-address"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-20T12:28:26.751-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hale-mercury-454219-r1/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc",
            "priority": 1000,
            "project": "hale-mercury-454219-r1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-03-20T12:28:26.756-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hale-mercury-454219-r1/global/firewalls/default-allow-internal",
            "log_config": [],
            "name": "default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc",
            "priority": 1000,
            "project": "hale-mercury-454219-r1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/firewalls/default-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-20T12:28:26.755-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hale-mercury-454219-r1/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc",
            "priority": 2000,
            "project": "hale-mercury-454219-r1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-03-20T12:28:26.744-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hale-mercury-454219-r1/global/firewalls/deny-all",
            "log_config": [],
            "name": "deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc",
            "priority": 65534,
            "project": "hale-mercury-454219-r1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/firewalls/deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/hale-mercury-454219-r1/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "440066801845523114",
            "project": "hale-mercury-454219-r1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-20T12:28:27.054-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/hale-mercury-454219-r1/regions/europe-west1/subnetworks/subnetwork",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "hale-mercury-454219-r1",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hale-mercury-454219-r1/regions/europe-west1/subnetworks/subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    }
  ]
}